styles.css
:root {
    --dark-blue: #1f2937;
    --dark-text: #f9faf8;
    --dark-text-secondary: #e5e7eb;
    --accent: #3882f8;
}

body {
    padding: 0;
    margin: 0;
    font-family: Roboto, sans-serif;
}

.hero-main {
    font-size: 48px;
    font-weight: 900;
    color: var(--dark-text);
    padding: 0;
    margin: 0;
}

.hero-secondary {
    font-size: 18px;
    color: var(--dark-text-secondary);
    line-height: 1.4rem;
}

.hero-logo {
    font-size: 24px;
    font-weight: 700;
    color: var(--dark-text);
}

.quote {
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
}

.nav {
    display: flex;
    justify-content: center;
    background-color: var(--dark-blue);
}

.nav-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 16px;
    width: 1000px;
}

.nav-items {
    display: flex;
    justify-content: space-between;
    gap: 32px;
}

.nav-items a {
    text-decoration: none;
}

.hero {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 64px;
    background-color: var(--dark-blue);
}

.hero-container {
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    width: 1000px;
    gap: 64px;
}

.hero-message {
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: start;
    flex: 1;
}

.hero-image {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #7d7d7d;
    color: white;
    flex: 1;
}

.btn-primary {
    background-color: var(--accent);
    color: white;
    padding: 8px 32px;
    border-radius: 8px;
    border: none;
}

